// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExperimentUpdatesHandler Loads cell sets if QC pipeline completes  1`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "pipeline": Object {
      "status": "SUCCEEDED",
    },
  },
]
`;

exports[`ExperimentUpdatesHandler Loads cell sets if QC pipeline completes  2`] = `
Array [
  "mockPlotUuid",
  "mockPlotData",
]
`;

exports[`ExperimentUpdatesHandler Loads cell sets if QC pipeline completes  3`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  true,
]
`;

exports[`ExperimentUpdatesHandler Loads cell sets if Seurat pipeline completes  1`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "seurat": Object {
      "status": "SUCCEEDED",
    },
  },
]
`;

exports[`ExperimentUpdatesHandler Loads cell sets if Seurat pipeline completes  2`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  true,
]
`;

exports[`ExperimentUpdatesHandler Logs error if there is an error returned as an experiment update 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Experiment updates error:",
      Object {
        "input": Object {
          "sampleUuid": "mockSampleUuid",
          "taskName": "mockTaskName",
        },
        "output": Object {
          "config": Object {
            "processingConfigUpdate": Object {
              "mockProcessingConfigUpdate": "mockProcessingConfigUpdate",
            },
          },
          "plotData": Object {
            "mockPlotUuid": "mockPlotData",
          },
        },
        "response": Object {
          "error": true,
          "errorCode": "MOCK_ERROR_CODE",
          "userMessage": "mockUserMessage",
        },
        "status": Object {
          "pipeline": Object {
            "status": "ERROR",
          },
        },
        "type": "qc",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ExperimentUpdatesHandler Triggers properly for GEM2S updates  1`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "pipeline": Object {
      "status": "RUNNING",
    },
  },
]
`;

exports[`ExperimentUpdatesHandler Triggers properly for GEM2S updates  2`] = `undefined`;

exports[`ExperimentUpdatesHandler Triggers properly for QC updates  1`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "pipeline": Object {
      "status": "RUNNING",
    },
  },
]
`;

exports[`ExperimentUpdatesHandler Triggers properly for QC updates  2`] = `
Array [
  "mockTaskName",
  Object {
    "processingConfigUpdate": Object {
      "mockProcessingConfigUpdate": "mockProcessingConfigUpdate",
    },
  },
  "mockSampleUuid",
  false,
]
`;

exports[`ExperimentUpdatesHandler Triggers properly for QC updates  3`] = `
Array [
  "mockPlotUuid",
  "mockPlotData",
]
`;

exports[`ExperimentUpdatesHandler Triggers properly for SEURAT updates  1`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "seurat": Object {
      "status": "RUNNING",
    },
  },
]
`;

exports[`ExperimentUpdatesHandler Triggers properly for SEURAT updates  2`] = `
Array [
  "testae48e318dab9a1bd0bexperiment",
  Object {
    "seurat": Object {
      "status": "RUNNING",
    },
  },
]
`;
